--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ pandas==2.0.0
 scipy==1.10.1
 torch==2.0.0
 transformer-lens @ git+https://github.com/neelnanda-io/TransformerLens@d48e72a69833881b32fddcba06455ac0000d8ba2
+seaborn==0.12.2
 
 # Example scp command for secrets on vast.ai: scp -P 21502 secrets.json root@ssh4.vast.ai:/root/AutoInterpret
